# career_mgmt

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  deployment_guide.md  docker_compose.yml  pyproject.toml
pages/: about.py  home.py
src/resume_analyzer/: resume_analyzer.py
